# flava_ai_new

./: .gitignore  Dockerfile  entrypoint.sh  nginx.conf  pyproject.toml  supervisord.conf  test.json
.github/workflows/: lint.yaml
flava_ai_frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
flava_ai_frontend/src/: index.css  vite-env.d.ts
flava_ai_frontend/src/components/: AgenticToggle.tsx  ChatHeader.tsx  ChatHistoryItem.tsx  ChatInput.tsx  ChatLayout.tsx  Message.tsx  MessageActions.tsx  MessageAvatar.tsx  MessageList.tsx  RightSidebar.tsx  Sidebar.tsx
flava_ai_frontend/src/hooks/: useChat.ts
flava_ai_frontend/src/pages/: Index.tsx
src/: main.py
src/data/: blaze-swap_simple_d3.json
src/flava_ai_new/: PROMPTS.py  agent_tools.py  agents.py  chat.py  embedding.py  main.py  qdrant.py  response.py
src/flava_ai_new/attestation/: simulated_token.txt  vtpm_validation.py
src/flava_ai_new/utils/: __init__.py  file_utils.py
